# openbox-deepagents-sdk-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr-quality.yml  publish.yml
docs/: README.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
examples/content-builder-agent/: .env.example  .gitignore  content_writer.py  langchain_blog_post.md  langchain_blog_post_v2.md  pyproject.toml
examples/content-builder-agent/skills/blog-post/: SKILL.md
examples/content-builder-agent/skills/social-media/: SKILL.md
openbox_deepagent/: __init__.py  deepagent_handler.py  middleware.py  middleware_factory.py  middleware_hooks.py  subagent_resolver.py
test-agent/: SETUP.md  agent.py  pyproject.toml
tests/: test_deepagent_handler.py  test_middleware.py
